tf/sg.tf
resource "aws_security_group" "bastion-sg" {
  name   = "bastion-sg"
  vpc_id = "${aws_vpc.main_vpc.id}"

  ingress {
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = -1
    from_port   = 0 
    to_port     = 0 
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#Public keys 'mypass'
resource "aws_key_pair" "mykey" {
	key_name = "mykey"
	public_key = "${file("mykey.pub")}"
	#public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC4zXrJ9dujryYeFEFDItKAlTDIO0RNgjA8k8lNEWLm7u1vMLs6tUxBHGTrDcmAKyYygxxdWbo79p69nnX2Q/QDPxts/bZrzEpcEMm1ylWvRVinf72qKTb526or7SrlrQ9zXsayPL0wKYlOUhkKjddeELzvb7dL416qOAraCs/wpyCoz9jrCe46LtfUKA7KSlO5a3TV/88UFKvYTxv/E5MGR2vUXEg2r9HjUKMkD2GN/gdlw/GY/wvGBl1J8dj3+luEstgMxeUA7462kRRAJJ8kngt6b6Jlp1dX7PoBv1SMB1b8KcNeIJ8Y8JbTxKbRrD7QZIY6sNtb0CKKNmGqfoMldUXzegs9I5jwFTxuBJ/jiL2WE/dhrAERXzY9KGE1aFfOQqaNq/ZkVsiyTw8ofEC2r/VX7b9IfGPMdUbSuZNk7294ZyO6+gT0PLsvJAbC [...]
}
